scripts/nullness/annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8.txt
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:33: error: [assignment] incompatible types in assignment.
    private GameField gameField = null;
                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull GameField
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:49: error: [method.invocation] call to createCop() not allowed on the given receiver.
        gameField.addNewObject(createCop());
                                        ^
  found   : @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController
  required: @Initialized @NonNull GameController
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:50: error: [method.invocation] call to createHobo() not allowed on the given receiver.
        gameField.addNewObject(createHobo());
                                         ^
  found   : @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController
  required: @Initialized @NonNull GameController
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:42: error: [dereference.of.nullable] dereference of possibly-null reference currentInfo
                if(neighbourInfo == null || neighbourInfo.pathLength > currentInfo.pathLength + 1) {
                                                                       ^
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:43: error: [dereference.of.nullable] dereference of possibly-null reference currentInfo
                    nodesInfo.put(neighbour, new BFSNodeInfo(current, currentInfo.pathLength + 1));
                                                                      ^
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:59: error: [dereference.of.nullable] dereference of possibly-null reference currentInfo
        while (!currentInfo.predecessor.equals(current)) {
                ^
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:27: error: [initialization.fields.uninitialized] the constructor does not initialize fields: lightAreaStart, lightAreaEnd
    protected BasicGamePrinter(int fieldWidth, int fieldHeight) {
              ^
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:29: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameUpperPart, fieldWidth + 2);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:31: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameBottomPart, fieldWidth + 2);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:33: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameRightPart, fieldHeight);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../annotator/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:35: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameLeftPart, fieldHeight);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
11 errors
